AC_INIT(g15daemon_xmms_spectrum.c,[2.0svn], [mlampard@users.sf.net])
 
PACKAGE=g15daemon_xmms_spectrum
VERSION=2.0.0
AC_PREFIX_DEFAULT(/usr)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_CONFIG_HEADER([config.h])
 
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_RANLIB

AC_CHECK_LIB([g15daemon_client], [g15daemon_version],,AC_MSG_ERROR(["libg15daemon_client (or its devel package) not found. please install it"]))
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(g15daemon_client.h libg15render.h,,AC_MSG_ERROR(["libg15daemon_client (or its devel package) could not be found.  please install it"]))
AC_CHECK_HEADERS(X11/Xlib.h X11/XF86keysym.h,,AC_MSG_ERROR(["Xorg development files could not be found.  please install the devel package"]))
AC_PATH_X

AM_PATH_GLIB(1.2.2,,)
AM_PATH_XMMS(1.2.4,,[have_xmms=yes])
AM_PATH_GTK(1.2.2,,)
LIBS="$LIBS $GTK_LIBS"
CPPFLAGS=$CPPFLAGS_save

AC_ARG_ENABLE(xmmsplugin,
[  --disable-xmmsplugin    Make g15daemon_spectrum_xmms xmms plugin],
[case "${enableval}" in
  yes) xmmsplugin=true ;;
  no)  xmmsplugin=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-xmmsplugin) ;;
esac],[xmmsplugin=true])
AM_CONDITIONAL(HAVE_XMMSPLUGIN, test x$xmmsplugin = xtrue)


AC_OUTPUT(Makefile)
