AC_INIT(g15macro,[1.0.3], [mlampard@users.sf.net])
 
PACKAGE=g15macro
VERSION=1.0.3
AC_PREFIX_DEFAULT(/usr)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_CONFIG_HEADER([config.h])
 
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_RANLIB

AC_CHECK_LIB([g15daemon_client], [g15daemon_version],,AC_MSG_ERROR(["libg15daemon_client (or its devel package) not found. please install it"]))
AC_CHECK_LIB([Xtst],[XTestQueryExtension],have_xtest_libs=yes,AC_MSG_WARN(["Xorg XTest extension library not found.  please install it"]))
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(g15daemon_client.h libg15render.h,,AC_MSG_ERROR(["libg15daemon_client (or its devel package) could not be found.  please install it"]))
AC_CHECK_HEADERS(X11/Xlib.h X11/XF86keysym.h,,AC_MSG_ERROR(["Xorg development files could not be found.  please install the devel package"]))
AC_CHECK_HEADERS(X11/extensions/XTest.h,have_xtest_includes=yes,AC_MSG_WARN(["Xorg XTEST Extension devel headers could not be found. Reverting to XSendEvent()"]))
AC_PATH_X

AC_ARG_ENABLE([xtest],AS_HELP_STRING([--enable-xtest],[enable use of the XTest extension]))

if test "x$have_xtest_libs" = "xyes"; then
  if test "x$have_xtest_includes" = "xyes"; then
    AC_DEFINE([HAVE_XTEST],[1],[Define if XTest devel package is available"])
    if test "x$enable_xtest" = "xyes"; then
      AC_DEFINE([USE_XTEST],[1],[Enable this to use the XTest extension if available])
    fi
  fi
fi

CPPFLAGS="$CPPFLAGS "'-DDATADIR="\"$(datadir)\""'

AC_OUTPUT(Makefile)
